Fix entries overflowing on lists

--- a/resources/stylesheets/components/_h-feed.scss
+++ b/resources/stylesheets/components/_h-feed.scss
@@ -22,6 +22,8 @@
 
     justify-content: center;
 
+    max-width: 100%;
+
     font-size: 1em;
     font-weight: inherit;
   }
